reduces the code smell